// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutboundIdentifierListsDetailsPanel Renders renders 1`] = `
<styled.div
  className="mockClassName"
  id="mockId"
>
  <DetailHeader
    text="Details"
  />
  Child
  <DetailHeader
    onActionButtonClick={[Function]}
    text="undefined List Item(s)"
    userHasUpdatePermission={true}
  />
  <_class
    fields={
      Array [
        Object {
          "label": "Name",
          "name": "name",
        },
        Object {
          "label": "Value",
          "name": "value",
        },
        Object {
          "label": "Channel Type",
          "name": "channelType",
        },
        Object {
          "label": "Description",
          "name": "description",
        },
      ]
    }
    userHasUpdatePermission={true}
  />
</styled.div>
`;

exports[`OutboundIdentifierListsDetailsPanel Renders renders without update permissions 1`] = `
<styled.div
  className="mockClassName"
  id="mockId"
>
  <DetailHeader
    text="Details"
  />
  <React.Fragment>
    <Detail
      label="Name"
      value="mockName"
    />
    <Detail
      label="Description"
      value="mockDescription"
    />
  </React.Fragment>
  <DetailHeader
    onActionButtonClick={[Function]}
    text="undefined List Item(s)"
    userHasUpdatePermission={false}
  />
  <_class
    fields={
      Array [
        Object {
          "label": "Name",
          "name": "name",
        },
        Object {
          "label": "Value",
          "name": "value",
        },
        Object {
          "label": "Channel Type",
          "name": "channelType",
        },
        Object {
          "label": "Description",
          "name": "description",
        },
      ]
    }
    userHasUpdatePermission={false}
  />
</styled.div>
`;
